<resources>
    <string name="app_name">MyChat</string>
    <string name="mychat">MyChat</string>
    <string name="login">LOGIN</string>
    <string name="relevant_image">relevant-image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_registered">Not Registered?</string>
    <string name="already_registered">Already Registered?</string>
    <string name="enter_name">Enter Name</string>
    <string name="register">REGISTER</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="edit_your_name">Edit your name ...</string>
    <string name="_25">25</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="azhar">Azhar</string>
    <string name="status">status</string>
</resources>
