<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTextIcons"
    android:scrollbars="none"
    tools:context="marmu.com.mychat.Controller.Activity.RegisterActivity.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTextIcons">

        <android.support.v7.widget.Toolbar
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary" />

        <RelativeLayout
            android:id="@+id/rlImageContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:background="@color/colorAccent">

            <ImageView
                android:id="@+id/ivProfilePicHolder"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/relevant_image"
                android:layout_alignParentLeft="true" />

            <RelativeLayout
                android:id="@+id/rlImagePickerLayout"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/rounded_layout">

                <ImageButton
                    android:id="@+id/lbtnProfilePic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_camera_alt_white_24dp"
                    android:contentDescription="@string/relevant_image" />
            </RelativeLayout>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlImageContainer"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">


            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_text_box"
                android:ems="10"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_text_box"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_text_box"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:onClick="register"
                android:text="@string/register"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:onClick="login"
                android:text="@string/already_registered"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>


