<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryText"
    tools:context=".Controller.Activity.UserSettingsActivity.Activity.UserEditName">

    <android.support.v7.widget.Toolbar
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginRight="16dp"
                android:layout_toStartOf="@+id/ivSmileys"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/ivSmileys">

                <EditText
                    android:id="@+id/etEditName"
                    android:maxLength="25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/edit_your_name"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent" />

                <TextView
                    android:visibility="visible"
                    android:id="@+id/tvNameLength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/_25"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textColor="@color/colorAccent"
                    android:layout_alignParentRight="true" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_alignEnd="@+id/tvNameLength"
                    android:layout_below="@+id/etEditName"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorAccent"
                    android:layout_alignRight="@+id/tvNameLength" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/ivSmileys"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignBottom="@+id/relativeLayout"
                android:layout_alignParentEnd="true"
                android:src="@mipmap/ic_mood_black_24dp"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/relevant_image" />
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_text_box"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="16dp"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/btnOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_text_box"
            android:gravity="center"
            android:padding="16dp"
            android:onClick="ok"
            android:text="@string/ok"
            android:layout_weight="1"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/colorAccent" />
    </LinearLayout>


</RelativeLayout>
